# flutter_camera_calibration

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ffigen.yaml  init.sh  pubspec.yaml
.cache/clangd/index/: common.h.B3C12ADF306AEB5E.idx  flutter_camera_calibration.c.2CC02B4BA30D066D.idx  flutter_camera_calibration.h.B419444034E26B19.idx
ScreenShots/data/: opencv_4_7_in_VID5.xml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/lib/: main.dart
ios/: flutter_camera_calibration.modulemap  flutter_camera_calibration.podspec
ios/Classes/: FlutterCameraCalibrationPlugin.m  SwiftFlutterCameraCalibrationPlugin.swift  flutter_camera_calibration.c
lib/: flutter_camera_calibration.dart  flutter_camera_calibration_bindings_generated.dart
src/: CMakeLists.txt  camera_calibrate.cpp  camera_info.h  canny_detector.cpp  common.h  epipolar_geometry.cpp  flutter_camera_calibration.c  flutter_camera_calibration.cpp  flutter_camera_calibration.h  flutter_camera_calibration4_3.cpp  flutter_camera_calibration4_7.cpp  gaussian.cpp  image_ffi.cpp  main.cpp
src/backup/: flutter_camera_calibration.c
src/include/opencv2/: cvconfig.h
src/include/opencv2/core/: version.hpp
src/include/opencv2/gapi/: garg.hpp  garray.hpp  gcommon.hpp  gkernel.hpp  gmat.hpp  gscalar.hpp  gstreaming.hpp  gtype_traits.hpp  gtyped.hpp  infer.hpp  opencv_includes.hpp
src/include/opencv2/gapi/infer/: ie.hpp
src/include/opencv2/gapi/streaming/: desync.hpp
src/include/opencv2/gapi/util/: variant.hpp
(+57 files in other folders)
